# autoci

./: .gitignore  CHANGES.md  README.md  autoci.opam  dune-project
src/: appveyor.ml  autoappveyor.ml  autoci.ml  autotravis.ml  consistency.ml  dune  files.ml  jbuild  lint.ml  opam.ml  opam.mli  parse_env.ml  test.ml  test.mli  travis.ml  travis_to_appveyor.ml
test/has-depopts/: conduit-async.opam  conduit-lwt-unix.opam  conduit-lwt.opam  conduit.opam  mirage-conduit.opam
test/no-tests/: .travis.yml  dns-async.opam  dns-lwt-unix.opam  dns-lwt.opam  dns.opam  mirage-dns.opam
test/package-not-in-matrix/: mirage-qubes-ipv4.opam  mirage-qubes.opam
test/tests-not-built/: .travis.yml  dune-project  fat-filesystem.opam
test/tests-not-run/: cohttp-async.opam  cohttp-lwt-jsoo.opam  cohttp-lwt-unix.opam  cohttp-lwt.opam  cohttp-mirage.opam  cohttp-top.opam  cohttp.opam  dune-project
