opam-version: "2.0"
version: "0.1"
synopsis: "Generate cloud-based CI config for OCaml projects"
description: """
Consults information in opam files and other build data to automatically generate CI invocations for OCaml projects.  It makes use of OCaml CI helpers at https://github.com/ocaml/ocaml-ci-scripts .  It is also intended to have some linting functionality, for use in managing CI configurations across multi-repository projects.
"""
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
license: "MIT"
homepage: "https://github.com/yomimono/autoci"
bug-reports: "https://github.com/yomimono/autoci/issues"
build: [
  ["jbuilder" "build" "-p" name ]
]
dev-repo: "git+https://github.com/yomimono/autoci.git"
depends: [
  "jbuilder" {build}
  "topkg-jbuilder" {build}
  "astring"
  "bos"
  "cmdliner"
  "fmt"
  "fpath"
  "ocaml" {>= "4.03.0"}
  "opam-format"
  "opam-state"
  "yaml"
]
