opam-version: "1.2"
version: "0.1"
synopsis: "Generate cloud-based CI config for OCaml projects"
maintainer: "Mindy Preston <meetup@yomimono.org>"
authors: "Mindy Preston <meetup@yomimono.org>"
license: "MIT"
homepage: "https://github.com/yomimono/autoci"
bug-reports: "https://github.com/yomimono/autoci/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs ]
]
dev-repo: "git+https://github.com/yomimono/autoci.git"
depends: [
  "dune" {build & >= "1.0"}
  "topkg-jbuilder" {build}
  "astring"
  "bos"
  "cmdliner"
  "fmt"
  "fpath"
  "opam-format"
  "opam-state"
  "yaml" {>= "2.0.0"}
]
available: [ocaml-version >= "4.03.0"]
