opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Stefano Zacchiroli"
  "David Sheets"
  "Thomas Gazagnaire"
  "David Scott"
  "Rudi Grinberg"
  "Andy Ray"
]
homepage: "https://github.com/mirage/ocaml-cohttp"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
dev-repo: "https://github.com/mirage/ocaml-cohttp.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "base-bytes"
  "dune" {build & >= "1.0"}
  "re"
  "uri" {>= "1.9.0"}
  "fieldslib"
  "sexplib"
  "ppx_type_conv" {build & >="v0.9.1"}
  "ppx_fields_conv" {build & >="v0.9.0"}
  "ppx_sexp_conv" {build & >="v0.9.0"}
  "stringext"
  "base64" {>= "2.0.0"}
  "fmt" {test}
  "jsonm" {build}
  "alcotest" {test}
]
available: [ocaml-version >= "4.03.0"]
